# CARL-PROJECT

carl_control/: CMakeLists.txt  package.xml
carl_control/launch/: carl_control.launch.py
carl_control/src/: autostop_node.cpp  carl_control_node.cpp  manual_teleop.cpp  odom_node.cpp
carl_description/: CMakeLists.txt  package.xml
carl_description/config/: ros_gz_bridge_gazebo.yaml
carl_description/launch/: display.launch.py
carl_description/meshes/: Inclina_ruota_destra_1_1.stl  Inclina_ruota_sinistra_1_1.stl  LIDAR_1.stl  base_link.stl  destra_posteriore_1_1.stl  ruota_destra_anteriore_1_1.stl  ruota_destra_anteriore_2_1.stl  ruota_destra_posteriore_1_1.stl  ruota_sinistra_anteriore_1_1.stl  ruota_sinistra_anteriore_2_1.stl  ruota_sinistra_posteriore_1_1.stl  sinistra_posteriore_1_1.stl
carl_description/urdf/: Robot_wrapper.urdf.xacro  carl.gazebo  carl.ros2control  carl.xacro  materials.xacro
carl_sim/: CMakeLists.txt  package.xml
carl_sim/launch/: carl_spawn.launch.py
