<package format="3">
  <name>carl_control</name>
  <version>0.0.1</version>
  <description>Controller for car-like robot with 4 drive wheels and 2 steer joints</description>

  <maintainer email="tuo@email.it">Tuo Nome</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
